--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <div class="col-xs-12 col-sm-4 portfolio-item">
                 <div class="col-sm-6 portfolio-item"> 
                 <a  href="water_use_index.html" target="_blank">
-                    <img class="img-responsive" src="img/precip_home.png" alt="">
+                    <img class="img-responsive" src="img/conflict_home.png" alt="">
                 </a>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
