--- a/drinking_index.html
+++ b/drinking_index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <meta property="og:title" content="Oregon Water Atlas: Drinking Water" />
-    <meta property="og:url" content="http://rawgit.com/cartobaldrica/water_atlas/master/drinking_index.html" />
+    <meta property="og:url" content="https://cartobaldrica.github.io/drinking_index.html" />
     <meta property="og:description" content="Explore Oregon's drinking water." />
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -33,12 +33,10 @@
 </head>
 <body>
 <div class="navbar navbar-inverse navbar-fixed-top navbar-toggleable-md" role="navigation">
-    <div class="container">
+    <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header" style="left:10px; position: fixed;">
             <a class="navbar-brand" href="https://cartobaldrica.github.io/">Home</a>
-            <a class="navbar-brand" data-toggle="modal" data-target="#share-modal" style="cursor:pointer;">Share</a>
-            <a class="navbar-brand" data-toggle="modal" data-target="#info-modal" style="cursor:pointer;">About</a>
             <a class="navbar-brand" href="#">Drinking Water</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -59,6 +57,21 @@
                 <li>
                     <a href="javascript:window.scrollBy(0, $('section[data-scene=contaminants]').offset().top - $(window).scrollTop() - 10);">Contaminants</a>
                 </li>
+                <li>
+            		<a  data-toggle="modal" data-target="#info-modal">About</a>
+                </li>
+                <li>
+                 <div class="dropdown">
+  					<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    					Share
+  					</button>
+  					<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    					<a class="dropdown-item" target="_blank" href="https://facebook.com/sharer.php?u=http://rawgit.com/cartobaldrica/water_atlas/master/infrastructure_index.html">Facebook</a><br/>
+   						<a class="dropdown-item" target="_blank" href="https://twitter.com/home?status=Oregon's%20Groundwater%0Ahttp%3A//rawgit.com/cartobaldrica/water_atlas/master/infrastructure_index.html">Twitter</a><br/>
+    					<a class="dropdown-item" target="_blank" href="https://github.com/cartobaldrica/water_atlas">Github</a>
+  					</div>
+				</div>
+				</li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -166,8 +179,8 @@
             <div class="modal-content">
                 <div class="modal-body">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <a class="fa fa-facebook-square social2" style="font-size: 8em; display:inline;" href="https://facebook.com/sharer.php?u=http://rawgit.com/cartobaldrica/water_atlas/master/infrastructure_index.html" target="_blank"></a>
-    				<a class="fa fa-twitter-square social3" style="font-size: 8em; display:inline;" href="https://twitter.com/home?status=Oregon's%20Groundwater%0Ahttp%3A//rawgit.com/cartobaldrica/water_atlas/master/infrastructure_index.html" target="_blank"></a>
+                    <a class="fa fa-facebook-square social2" style="font-size: 8em; display:inline;" href="https://facebook.com/sharer.php?u=https://cartobaldrica.github.io/infrastructure_index.html" target="_blank"></a>
+    				<a class="fa fa-twitter-square social3" style="font-size: 8em; display:inline;" href="https://twitter.com/home?status=Oregon's%20Groundwater%0Ahttp%3A//cartobaldrica.github.io/infrastructure_index.html" target="_blank"></a>
 					<a class="fa fa-github-square social3" style="font-size: 8em; display:inline;" href="https://github.com/cartobaldrica/water_atlas" target="_blank"></a>
 					<br/>
                 </div>
@@ -235,7 +248,7 @@
 //<p style="text-align:left; font-weight:bold">Hover for source</p>'
 
     var layers = {  
-            'contaminants' : [L.geoJson.ajax('http://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:contaminants&maxFeatures=100000&outputFormat=application%2Fjson', {
+            'contaminants' : [L.geoJson.ajax('https://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:contaminants&maxFeatures=100000&outputFormat=application%2Fjson', {
             	pointToLayer: function (feature, latlng) {
     			return L.circleMarker(latlng, {
     				color: contaminant_level(feature.properties.MOD_RISK),
@@ -247,7 +260,7 @@
     					).bindTooltip(feature.properties.PCS_NAME, {className: 'label_tooltip'});
     				}
 				}), legend_contaminants],
-			'bottle': [L.geoJson.ajax('http://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:bottled_water&maxFeatures=100&outputFormat=application%2Fjson', {
+			'bottle': [L.geoJson.ajax('https://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:bottled_water&maxFeatures=100&outputFormat=application%2Fjson', {
 					pointToLayer: function (feature, latlng) {
             				var bottleIcon = new L.Icon({
             						iconUrl: 'img/bottle.png',
@@ -260,7 +273,7 @@
                 			layer.bindTooltip(feature.properties.Name, {className: 'label_tooltip', sticky: true});
             		}
     			}),legend_bottle],	
-    		'grid1': [L.geoJson.ajax('http://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:contaminant_point_grid&maxFeatures=10000&outputFormat=application%2Fjson', {
+    		'grid1': [L.geoJson.ajax('https://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:contaminant_point_grid&maxFeatures=10000&outputFormat=application%2Fjson', {
     				pointToLayer: function (feature, latlng) {
     					return L.circleMarker(latlng, 
     						{
@@ -273,7 +286,7 @@
 							}
 								).bindTooltip('Contaminants: ' + feature.properties.NUMPOINTS, {opacity: setOpacity(feature.properties.level, 1), className: 'label_tooltip'});}
     			}),legend_grid],	
-            'surface': [L.geoJson.ajax('http://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:drinking_sw&maxFeatures=500&outputFormat=application%2Fjson',
+            'surface': [L.geoJson.ajax('https://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:drinking_sw&maxFeatures=500&outputFormat=application%2Fjson',
             	{style:surface_style, onEachFeature: function(feature, featureLayer) {
         			featureLayer.bindTooltip(feature.properties.PWS_NAME, {className: 'label_tooltip'});
         			featureLayer.on({
@@ -282,7 +295,7 @@
         				})
     			}}
             	), legend_sw],
-            'ground': [L.geoJson.ajax('http://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:drinking_gw&maxFeatures=10000&outputFormat=application%2Fjson',
+            'ground': [L.geoJson.ajax('https://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:drinking_gw&maxFeatures=10000&outputFormat=application%2Fjson',
             	{style:ground_style, onEachFeature: function(feature, featureLayer) {
         			featureLayer.bindTooltip(feature.properties.TINWSYS_NA, {className: 'label_tooltip'});
     			}}
