--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
 
         <!-- Page Header -->
         <div class="row text-center">
-  			<li><a href="http://oregonstate.edu/" target="_blank"><img src="img/OSU-logo.png" style="max-width:7%;" ></a></li>
             <li><img src="img/oregon.jpg" style="max-width:20%;" ></li>
-            <li><a href="http://water.oregonstate.edu/" target="_blank"><img src="img/IWW-Icon.png" style="max-width:6%;" ></a></li>
 		</div>
         
         <div class="row">
@@ -180,7 +178,7 @@
             </div>
             <div class="col-xs-12 col-sm-4 portfolio-item">
                 <div class="col-sm-6 portfolio-item"> 
-                <a  href="water_use_index.html" target="_blank">
+                <a  href="" target="_blank">
                     <img class="img-responsive" src="img/conflict_home.png" alt="">
                 </a>
                 </div>
@@ -215,7 +213,9 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Gareth Baldrica-Franklin, Institute for Water and Watersheds, Oregon State University, 2017</p>
+                	<p>Gareth Baldrica-Franklin, Institute for Water and Watersheds, Oregon State University, 2017</p>
+                	<a href="http://geoviz.ceoas.oregonstate.edu/index.html#" target="_blank"><img src="img/geoviz_osu.png" style="max-width:15%;" ></a>
+            		<a href="http://water.oregonstate.edu/" target="_blank"><img src="img/IWW-logo.png" style="max-width:20%;" ></a>
                 </div>
             </div>
             <!-- /.row -->
